Prepare EXSLT for Markdowning

--- a/files/en-us/web/exslt/exsl/object-type/index.html
+++ b/files/en-us/web/exslt/exsl/object-type/index.html
@@ -11,7 +11,7 @@ tags:
 <p><code>exsl:object-type()</code> returns a string that indicates the type of the specified object.</p>
 
 <div class="notecard note">
-  <p>Note: Most <a href="/en-US/docs/Web/XSLTT">XSLT</a> object types can be coerced into each other safely; however, certain coercions to raise error conditions. In particular, treating something that\'s not a node-set as a node-set will do so. This function lets authors of named templates and extension functions easily provide flexibility in parameter values.</p>
+  <p><strong>Note:</strong> Most <a href="/en-US/docs/Web/XSLTT">XSLT</a> object types can be coerced into each other safely; however, certain coercions to raise error conditions. In particular, treating something that\'s not a node-set as a node-set will do so. This function lets authors of named templates and extension functions easily provide flexibility in parameter values.</p>
 </div>
 
 <h2 id="Syntax">Syntax</h2>
