--- a/files/en-us/web/exslt/index.html
+++ b/files/en-us/web/exslt/index.html
@@ -6,7 +6,7 @@ tags:
   - Landing
 ---
 
-<p class="summary"><span class="seoSummary">EXSLT is a set of extensions to <a href="/en-US/docs/Web/XSLT">XSLT</a>.</span> There are a number of modules; those that are supported by Firefox are listed below:</p>
+<p>EXSLT is a set of extensions to <a href="/en-US/docs/Web/XSLT">XSLT</a>. There are a number of modules; those that are supported by Firefox are listed below:</p>
 
 <p>{{SubpagesWithSummaries}}</p>
 
@@ -26,8 +26,6 @@ tags:
 &lt;/xsl:stylesheet&gt;
 </pre>
 
-<div class="topicpage-table">
-<div class="section">
 <h3 id="Common">Common</h3>
 
 <p>The EXSLT Common package provides basic functions that expand upon the capabilities of XSLT. The namespace for the Common package is <code>http://exslt.org/common</code>.</p>
@@ -65,9 +63,7 @@ tags:
  <li><code><a href="/en-US/docs/Web/EXSLT/regexp/replace">regexp:replace()</a></code></li>
  <li><code><a href="/en-US/docs/Web/EXSLT/regexp/test">regexp:test()</a></code></li>
 </ul>
-</div>
 
-<div class="section">
 <h3 id="Sets">Sets</h3>
 
 <p>The EXSLT Sets package offers functions that let you perform set manipulation. The namespace for these functions is <code>http://exslt.org/sets</code>.</p>
@@ -94,8 +90,6 @@ tags:
  <li><code><a href="/en-US/docs/Web/EXSLT/str/split">str:split()</a></code></li>
  <li><code><a href="/en-US/docs/Web/EXSLT/str/tokenize">str:tokenize()</a></code></li>
 </ul>
-</div>
-</div>
 
 <h2 id="See_also">See also</h2>
 
