--- a/files/en-us/web/exslt/regexp/index.html
+++ b/files/en-us/web/exslt/regexp/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{XSLTRef}}{{QuickLinksWithSubpages("/en-US/docs/Web/EXSLT")}}</div>
 
-<p class="summary"><span class="seoSummary">The EXSLT Regular Expressions package provides functions that allow testing, matching, and replacing text using JavaScript style regular expressions.</span> The namespace for the Regular Expressions package is <code>http://exslt.org/regular-expressions</code>.</p>
+<p>The EXSLT Regular Expressions package provides functions that allow testing, matching, and replacing text using JavaScript style regular expressions. The namespace for the Regular Expressions package is <code>http://exslt.org/regular-expressions</code>.</p>
 
 <p>{{SubpagesWithSummaries}}</p>
 
