--- a/files/en-us/web/exslt/set/index.html
+++ b/files/en-us/web/exslt/set/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <p>{{XSLTRef}}{{QuickLinksWithSubpages("/en-US/docs/Web/EXSLT")}}</p>
 
-<p class="summary"><span class="seoSummary">The EXSLT Sets package offers functions that let you perform set manipulation.</span> The namespace for these functions is <code>http://exslt.org/sets</code>.</p>
+<p>The EXSLT Sets package offers functions that let you perform set manipulation. The namespace for these functions is <code>http://exslt.org/sets</code>.</p>
 
 <p>{{SubpagesWithSummaries}}</p>
 
