--- a/files/en-us/web/exslt/str/index.html
+++ b/files/en-us/web/exslt/str/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <p>{{XSLTRef}}{{QuickLinksWithSubpages("/en-US/docs/Web/EXSLT")}}</p>
 
-<p class="summary"><span class="seoSummary">The EXSLT Strings package provides functions that allow the manipulation of strings.</span> The namespace for the Strings package is <code>http://exslt.org/strings</code>.</p>
+<p>The EXSLT Strings package provides functions that allow the manipulation of strings. The namespace for the Strings package is <code>http://exslt.org/strings</code>.</p>
 
 <p>{{SubpagesWithSummaries}}</p>
 
