--- a/files/en-us/web/exslt/exsl/index.html
+++ b/files/en-us/web/exslt/exsl/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{XSLTRef}}{{QuickLinksWithSubpages("/en-US/docs/Web/EXSLT")}}</div>
 
-<p class="summary"><span class="seoSummary">The EXSLT Common package provides basic functions that expand upon the capabilities of XSLT.</span> The namespace for the Common package is <code>http://exslt.org/common</code>.</p>
+<p>The EXSLT Common package provides basic functions that expand upon the capabilities of XSLT. The namespace for the Common package is <code>http://exslt.org/common</code>.</p>
 
 <p>{{SubpagesWithSummaries}}</p>
 
