--- a/files/en-us/web/exslt/math/index.html
+++ b/files/en-us/web/exslt/math/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{XSLTRef}}{{QuickLinksWithSubpages("/en-US/docs/Web/EXSLT")}}</div>
 
-<p class="summary"><span class="seoSummary">The EXSLT Math package provides functions for working with numeric values and comparing nodes.</span> The namespace for the Math package is <code>http://exslt.org/math</code>.</p>
+<p>The EXSLT Math package provides functions for working with numeric values and comparing nodes. The namespace for the Math package is <code>http://exslt.org/math</code>.</p>
 
 <p>{{SubpagesWithSummaries}}</p>
 
