--- a/files/en-us/web/exslt/regexp/test/index.html
+++ b/files/en-us/web/exslt/regexp/test/index.html
@@ -29,11 +29,9 @@ tags:
 
 <dl>
  <dt><code>g</code></dt>
- <dd>Global match</dd>
- <dd>Has no effect for this function; it's allowed for consistency with other regexp functions.</dd>
+ <dd>Global match. Has no effect for this function; it's allowed for consistency with other regexp functions.</dd>
  <dt><code>i</code></dt>
- <dd>Case insensitive match</dd>
- <dd>If this flag is specified, the match is performed in a case insensitive fashion.</dd>
+ <dd>Case insensitive match<. If this flag is specified, the match is performed in a case insensitive fashion.</dd>
 </dl>
 
 <h3 id="Returns">Returns</h3>
