--- a/files/en-us/web/exslt/set/has-same-node/index.html
+++ b/files/en-us/web/exslt/set/has-same-node/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <p>{{XSLTRef}}{{QuickLinksWithSubpages("/en-US/docs/Web/EXSLT")}}</p>
 
-<p><code>set:<span style="white-space: nowrap;">has-same-node</span>()</code> determines whether two node<span style="white-space: nowrap;">-</span>sets have any nodes in common.</p>
+<p><code>set:has-same-node()</code> determines whether two node-sets have any nodes in common.</p>
 
 <h2 id="Syntax">Syntax</h2>
 
