Prepare Web/Manifest

--- a/files/en-us/web/manifest/dir/index.html
+++ b/files/en-us/web/manifest/dir/index.html
@@ -41,7 +41,7 @@ browser-compat: html.manifest.dir
 </ul>
 
 <div class="notecard note">
-<p><strong>Note</strong>: If the value is omitted or set to <code>auto</code>, the browser will use the <a href="/en-US/docs/Web/Guide/Unicode_Bidrectional_Text_Algorithm">Unicode bidirectional algorithm</a> to make a best guess about the text's direction.</p>
+<p><strong>Note:</strong> If the value is omitted or set to <code>auto</code>, the browser will use the <a href="/en-US/docs/Web/Guide/Unicode_Bidrectional_Text_Algorithm">Unicode bidirectional algorithm</a> to make a best guess about the text's direction.</p>
 </div>
 
 <h2 id="Example">Example</h2>
