--- a/files/en-us/web/manifest/iarc_rating_id/index.html
+++ b/files/en-us/web/manifest/iarc_rating_id/index.html
@@ -25,7 +25,7 @@ browser-compat: html.manifest.iarc_rating_id
 <p>The <dfn><code>iarc_rating_id</code></dfn> member is a string that represents the <a href="https://www.globalratings.com/">International Age Rating Coalition (IARC)</a> certification code of the web application. It is intended to be used to determine which ages the web application is appropriate for.</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: The same code can be shared across multiple participating storefronts, as long as the distributed product remains the same (i.e., doesn’t serve totally different code paths on different storefronts).</p>
+<p><strong>Note:</strong> The same code can be shared across multiple participating storefronts, as long as the distributed product remains the same (i.e., doesn’t serve totally different code paths on different storefronts).</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
