--- a/files/en-us/web/manifest/related_applications/index.html
+++ b/files/en-us/web/manifest/related_applications/index.html
@@ -45,7 +45,7 @@ browser-compat: html.manifest.related_applications
 
 <p>Application objects may contain the following values:</p>
 
-<table class="fullwidth-table standard-table">
+<table class="standard-table">
  <thead>
   <tr>
    <th scope="col">Member</th>
