--- a/files/en-us/web/manifest/background_color/index.html
+++ b/files/en-us/web/manifest/background_color/index.html
@@ -27,7 +27,7 @@ browser-compat: html.manifest.background_color
 <p>Therefore <code>background_color</code> should match the {{cssxref("background-color")}} CSS property in the site’s stylesheet for a smooth transition between launching the web application and loading the site's content.</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: The <code>background_color</code> member is only meant to improve the user experience while the main stylesheet is loading from the network or the storage media; it is not used by the user agent as the {{cssxref("background-color")}} CSS property when the progressive web app stylesheet is available.</p>
+<p><strong>Note:</strong> The <code>background_color</code> member is only meant to improve the user experience while the main stylesheet is loading from the network or the storage media; it is not used by the user agent as the {{cssxref("background-color")}} CSS property when the progressive web app stylesheet is available.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
