--- a/files/en-us/web/manifest/index.html
+++ b/files/en-us/web/manifest/index.html
@@ -18,10 +18,7 @@ browser-compat: html.manifest
 
 <p>The web app manifest provides information about a web application in a {{Glossary("JSON")}} text file, necessary for the web app to be downloaded and be presented to the user similarly to a native app (e.g., be installed on the homescreen of a device, providing users with quicker access and a richer experience). PWA manifests include its name, author, icon(s), version, description, and list of all the necessary resources (among other things).</p>
 
-<div class="hidden">
-<p>Can PWA manifest contain comments?<br>
-It is a {{Glossary("JSON")}}-formatted file, with one exception: it is allowed to contain "<code>//</code>"-style comments.</p>
-</div>
+<p>A manifest is a {{Glossary("JSON")}}-formatted file, with one exception: it is allowed to contain "<code>//</code>"-style comments.</p>
 
 <h2 id="Members">Members</h2>
 
@@ -69,11 +66,11 @@ It is a {{Glossary("JSON")}}-formatted file, with one exception: it is allowed t
   }]
 }</pre>
 
-<h2 id="Deploying_a_manifest_with_the_link_tag">Deploying a manifest</h2>
+<h2>Deploying a manifest</h2>
 
 <p>Web app manifests are deployed in your HTML pages using a {{HTMLElement("link")}} element in the {{HTMLElement("head")}} of a document:</p>
 
-<pre id="output_head" class="brush: html">&lt;link rel="manifest" href="manifest.json"&gt;</pre>
+<pre class="brush: html">&lt;link rel="manifest" href="manifest.json"&gt;</pre>
 
 <p>The <code>.webmanifest</code> extension is specified in the <a href="https://w3c.github.io/manifest/#media-type-registration">Media type registration</a> section of the specification (the response of the manifest file should return <code>Content-Type: application/manifest+json</code>). Browsers generally support manifests with other appropriate extensions like <code>.json</code> (<code>Content-Type: application/json</code>).</p>
 
